<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/N2U_blue2"
    android:padding="8dp"
    android:id="@+id/researchLayout"
    >

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="N2U is for research"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        />

    <ScrollView
        android:id="@+id/researchSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTV"
        android:layout_above="@+id/nextBN"
        android:padding="8dp"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/research1IV"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/square"
            android:paddingTop="8dp"
            />

        <TextView
            android:id="@+id/research1TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/research1"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/research1IV"
            android:layout_alignTop="@+id/research1IV"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            />

        <ImageView
            android:id="@+id/research2IV"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/square"
            android:layout_below="@id/research1TV"
            android:paddingTop="8dp"
            />

        <TextView
            android:id="@+id/research2TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/research2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/research2IV"
            android:layout_alignTop="@+id/research2IV"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            />

        <ImageView
            android:id="@+id/research3IV"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/square"
            android:layout_below="@id/research2TV"
            android:paddingTop="8dp"
            />

        <TextView
            android:id="@+id/research3TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/research0"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_toRightOf="@+id/research3IV"
            android:layout_alignTop="@+id/research3IV"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="4dp"
            />

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/nextBN"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:text="Next"
        android:background="@color/N2U_orange"
        android:textColor="@color/white"
        style="?android:attr/borderlessButtonStyle"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        />

</RelativeLayout>